# hermes-examples

./: .gitignore  CMake.vars  CMake.vars.example  CMake.vars.example.Linux  CMake.vars.example.Windows  CMakeLists.txt  KNOWN_ISSUES.rst  README  README.rst  TEST
2d-advanced/: CMakeLists.txt
2d-advanced/acoustics/: CMakeLists.txt
2d-advanced/acoustics/apartment/: definitions.cpp  definitions.h  main.cpp
2d-advanced/acoustics/horn-axisym/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/acoustics/wave-propagation/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/advection-diffusion-reaction/: CMakeLists.txt
2d-advanced/advection-diffusion-reaction/linear/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/advection-diffusion-reaction/linear-advection-dg-adapt/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/advection-diffusion-reaction/linear-advection-diffusion/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/advection-diffusion-reaction/linear-dg-adapt/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/elasticity-linear/: CMakeLists.txt
2d-advanced/elasticity-linear/bracket/: CMakeLists.txt  definitions.h  generate_constants.py  main.cpp
2d-advanced/elasticity-linear/crack/: CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  main.cpp
2d-advanced/elasticity-linear/distortion/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  rect_1-1_Q.mesh  rect_3-1_Q.mesh  rect_3-1_Q.xml  rect_3-3_Q.mesh  rect_3-3_Q.xml  squareCoarse.xml  squareECoarse.xml  squareFine.xml  squareNormal.xml  squareTiny.xml
2d-advanced/elasticity/bracket/: CMakeLists.txt  definitions.h
2d-advanced/elasticity/crack/: CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh
2d-advanced/euler/: CMakeLists.txt  coupling.cpp  coupling.h  euler-init-main-adapt.cpp  euler-init-main.cpp  euler-time-loop-space-adapt.cpp  euler-time-loop.cpp  euler_util.cpp  euler_util.h  forms_explicit.cpp  forms_implicit.cpp  initial_condition.cpp  numerical_flux.cpp  numerical_flux.h
2d-advanced/euler/euler-coupled/: GAMM-channel-serial.mesh  GAMM-channel.mesh  main.cpp
2d-advanced/euler/euler-coupled-adapt/: GAMM-channel-serial.mesh  main.cpp
2d-advanced/euler/forward-step/: CMakeLists.txt  main.cpp
2d-advanced/euler/forward-step-adapt/: CMakeLists.txt  main.cpp
2d-advanced/euler/gamm-channel/: CMakeLists.txt  main.cpp
2d-advanced/euler/gamm-channel-adapt/: CMakeLists.txt  main.cpp
2d-advanced/euler/heating-flow-coupling/: CMakeLists.txt  main.cpp
2d-advanced/euler/heating-flow-coupling-adapt/: CMakeLists.txt  main.cpp
2d-advanced/euler/heating-induced-vortex/: CMakeLists.txt  main.cpp
2d-advanced/euler/heating-induced-vortex-adapt/: CMakeLists.txt  main.cpp  square.mesh
2d-advanced/euler/joukowski-profile/: CMakeLists.txt  Calculations.ods  Joukowski profile calculation in Mathematica.nb  NURBS calculation - 10.nb  NURBS calculation - 11.nb  NURBS calculation - 12.nb  NURBS calculation - 3.nb  NURBS calculation - 6.nb  domain-arcs.xml  domain-nurbs-backup.xml  domain-nurbs.xml  domain.xml  main.cpp
2d-advanced/euler/joukowski-profile-adapt/: CMakeLists.txt  domain.xml  main.cpp
2d-advanced/euler/reflected-shock/: CMakeLists.txt  main.cpp
2d-advanced/euler/reflected-shock-adapt/: CMakeLists.txt  main.cpp
2d-advanced/flame-propagation/: CMakeLists.txt
2d-advanced/flame-propagation/laminar-flame/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/heat-transfer/: CMakeLists.txt
2d-advanced/heat-transfer/heat-and-moisture-adapt/: CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  main.cpp
2d-advanced/heat-transfer/wall-on-fire-adapt/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/heat-transfer/wall-on-fire-adapt-space-and-time/: definitions.cpp  definitions.h  main.cpp
2d-advanced/heat-transfer/wall-on-fire-adapt-time-only/: definitions.cpp  definitions.h  main.cpp
2d-advanced/helmholtz/waveguide/: CMakeLists.txt  README.txt  definitions.cpp  definitions.h  domain.mesh  domain.xml  initial.xml  main.cpp
2d-advanced/linear-elasticity/bracket/: definitions.h  domain.mesh  main.cpp
2d-advanced/linear-elasticity/crack/: definitions.cpp  main.cpp
2d-advanced/maxwell/: CMakeLists.txt
2d-advanced/maxwell/magnetostatics/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/maxwell/magnetostatics-actuator/: CMakeLists.txt  definitions.h  main.cpp
2d-advanced/maxwell/magnetostatics-sensor/: CMakeLists.txt  definitions.cpp  main.cpp  sensor.msh
2d-advanced/maxwell/maxwell-debye-rk/: CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  main.cpp
2d-advanced/maxwell/microwave-oven/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  oven_load_circle.mesh
2d-advanced/maxwell/profile-conductor/: CMakeLists.txt  definitions.cpp  definitions.h  domain.xml
2d-advanced/maxwell/resonator-time-domain-I/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/maxwell/resonator-time-domain-II-ie/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/maxwell/resonator-time-domain-II-rk/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/miscellaneous/: CMakeLists.txt
2d-advanced/miscellaneous/local-projection-test/: CMakeLists.txt  definitions.cpp  main.cpp
2d-advanced/miscellaneous/optimal-meshes/: definitions.h  main.cpp
2d-advanced/miscellaneous/singular-perturbation/: CMakeLists.txt  definitions.h  main.cpp
2d-advanced/navier-stokes/: CMakeLists.txt
2d-advanced/navier-stokes/bearing/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/navier-stokes/circular-obstacle-adapt/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
2d-advanced/nernst-planck/: CMakeLists.txt
2d-advanced/neutronics/: CMakeLists.txt
2d-advanced/richards/: CMakeLists.txt  constitutive.h
2d-advanced/schroedinger/: CMakeLists.txt
2d-advanced/thermoelasticity/: CMakeLists.txt
(+581 files in other folders)
