add_subdirectory(acoustics)
add_subdirectory(advection-diffusion-reaction)
add_subdirectory(euler)
add_subdirectory(heat-transfer)
add_subdirectory(helmholtz)
add_subdirectory(elasticity-linear)
add_subdirectory(maxwell)
add_subdirectory(navier-stokes)
add_subdirectory(nernst-planck)

add_subdirectory(neutronics)

add_subdirectory(richards)
add_subdirectory(schroedinger)
add_subdirectory(wave-equation)

add_subdirectory(miscellaneous)
