IF(WITH_acoustics)
  add_subdirectory(acoustics)
ENDIF(WITH_acoustics)
IF(WITH_advection-diffusion-reaction)
  add_subdirectory(advection-diffusion-reaction)
ENDIF(WITH_advection-diffusion-reaction)
IF(WITH_euler)
  add_subdirectory(euler)
ENDIF(WITH_euler)
IF(WITH_heat-transfer)
  add_subdirectory(heat-transfer)
ENDIF(WITH_heat-transfer)
IF(WITH_helmholtz)
  add_subdirectory(helmholtz)
ENDIF(WITH_helmholtz)
IF(WITH_elasticity)
  add_subdirectory(elasticity)
ENDIF(WITH_elasticity)
IF(WITH_maxwell)
  add_subdirectory(maxwell)
ENDIF(WITH_maxwell)
IF(WITH_navier-stokes)
  add_subdirectory(navier-stokes)
ENDIF(WITH_navier-stokes)
IF(WITH_nernst-planck)
  add_subdirectory(nernst-planck)
ENDIF(WITH_nernst-planck)
IF(WITH_neutronics)
  add_subdirectory(neutronics)
ENDIF(WITH_neutronics)
IF(WITH_richards)
  add_subdirectory(richards)
ENDIF(WITH_richards)
IF(WITH_schroedinger)
  add_subdirectory(schroedinger)
ENDIF(WITH_schroedinger)
IF(WITH_wave-equation)
  add_subdirectory(wave-equation)
ENDIF(WITH_wave-equation)