add_subdirectory(resonator-time-domain-I)
add_subdirectory(resonator-time-domain-II-ie)
add_subdirectory(resonator-time-domain-II-rk)
add_subdirectory(maxwell-debye-rk)
add_subdirectory(magnetostatics-actuator)
add_subdirectory(magnetostatics-sensor)
add_subdirectory(microwave-oven)
#add_subdirectory(profile-conductor)