add_subdirectory(forward-step)
add_subdirectory(forward-step-adapt)
add_subdirectory(reflected-shock)
add_subdirectory(reflected-shock-adapt)
add_subdirectory(gamm-explicit)
add_subdirectory(gamm-explicit-adapt)
add_subdirectory(advection-diffusion-explicit)
add_subdirectory(advection-diffusion-explicit-adapt)