add_subdirectory(forward-step)
add_subdirectory(forward-step-adapt)
add_subdirectory(reflected-shock)
add_subdirectory(reflected-shock-adapt)
add_subdirectory(gamm-channel)
add_subdirectory(gamm-channel-adapt)
add_subdirectory(gamm-channel-advection)
add_subdirectory(gamm-channel-advection-adapt)
add_subdirectory(heating-induced-vortex)
add_subdirectory(heating-induced-vortex-adapt)
add_subdirectory(joukowski-profile)
add_subdirectory(joukowski-profile-adapt)
